# colab-satyaki

./: README.md
components/kobukiViewer/: CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  Makefile  cmake_install.cmake  kobukiViewer  qrc_resources.cxx
components/kobukiViewer/gui/: moc_gui.cxx  moc_gui.cxx_parameters
components/kobukiViewer/gui/widget/: cameraswidget.cpp  moc_cameraswidget.cxx  moc_cameraswidget.cxx_parameters  moc_controlvw.cxx  moc_controlvw.cxx_parameters  moc_glwidget.cxx  moc_glwidget.cxx_parameters
components/kobukiViewer/robot/: actuators.cpp  actuators.cpp~  actuators.h  actuators.h~  moc_robot.cxx  moc_robot.cxx_parameters  ros_compat.cpp~  ros_compat.h~  sensors.cpp  sensors.cpp~  sensors.h  sensors.h~
devel/include/my_pkg/: Num.h
devel/include/ros_compat/: Num.h  Pose3d.h
src/my_pkg/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/my_pkg/src/: listener.cpp  listener.cpp~  talker.cpp  talker.cpp~
src/ros_compat/: CMakeLists.txt  package.xml
src/ros_compat/src/: CameraClient.cpp  CameraDriver.cpp  CameraDump.cc  EncodersDriver.cc  EncodersDriver.h  LaserDriver.cc  MotorDriver.cc  MotorDriver.h  Pose3dDriver.cc  Pose3dDriver.h
